# yalht

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
configs/callbacks/: mnist.yaml
configs/datamodule/: mnist.yaml
configs/module/: mnist.yaml
configs/module/network/: mnist.yaml
src/: eval.py  train.py
src/datamodules/: __init__.py  mnist_datamodule.py
src/modules/: single_module.py
src/modules/losses/: __init__.py
src/modules/metrics/: __init__.py
src/modules/models/: __init__.py  simple_dense_net.py
src/utils/: __init__.py  utils.py
